--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8080
+github.client.id=2c28fc64c9407f52d7c4
+github.client.secret=5c72fb6d6e474c53d9ee77806d07f0d7393c24cb
+github.redirect.uri=http://localhost:8080/callback
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
